Rework to use Heroku

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "carrier-goose",
   "version": "1.0.0",
   "description": "<img width=\"1440\" alt=\"IMG_6735\" src=\"https://user-images.githubusercontent.com/45378799/147782240-aeaa3ed0-82de-493d-88e2-b9a263d7e54b.png\">",
-  "source": "index.js",
+  "main": "server.js",
   "scripts": {
-    "dev": "nodemon ./index.js"
+    "start": "node ./server.js",
+    "dev": "nodemon ./server.js"
   },
   "repository": {
     "type": "git",
@@ -19,13 +20,14 @@
   "homepage": "https://github.com/tomasciar/CarrierGoose#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "express-ejs-layouts": "^2.5.1",
+    "mongoose": "^6.1.5",
     "twilio": "^3.72.0"
   },
   "devDependencies": {
+    "dotenv": "^10.0.0",
     "nodemon": "^2.0.15"
-  },
-  "main": "index.js"
+  }
 }
